--- a/src/scss/_default.scss
+++ b/src/scss/_default.scss
@@ -1,6 +1,6 @@
 @import 'sass-variables';
 
-.asl {
+.asd {
     display: flex;
     flex-direction: column;
     margin: 0;
@@ -51,19 +51,25 @@
         padding: calc(var(--base-offset) * 2) calc(var(--base-offset) * 4);
         transition: var(--base-transition);
         text-decoration: none;
+        border: none;
+        cursor: pointer;
+        text-align: center;
+        font-size: 18px;
+        font-weight: 500;
 
         &_block {
             width: 100%;
         }
 
         &_small {
+            height: calc(var(--base-offset) * 4);
             padding: calc(var(--base-offset) * 1) calc(var(--base-offset) * 2);
         }
 
         &_base {
             background: var(--color-accent);
             color: var(--color-secondary);
-            box-shadow: inset 0 0 0 1px var(--color-accent);
+            box-shadow: inset 0 0 0 2px var(--color-accent);
 
             @media (hover: hover) and (pointer: fine) {
                 &:hover {
@@ -73,10 +79,21 @@
             }
         }
 
+        &_reset {
+            background: var(--color-tabs-border);
+            box-shadow: inset 0 0 0 2px var(--color-tabs-border);
+
+            @media (hover: hover) and (pointer: fine) {
+                &:hover {
+                    background: var(--color-tabs-back);
+                }
+            }
+        }
+
         &_lite {
             background: var(--color-secondary);
             color: var(--color-accent);
-            box-shadow: inset 0 0 0 1px var(--color-accent);
+            box-shadow: inset 0 0 0 2px var(--color-accent);
 
             @media (hover: hover) and (pointer: fine) {
                 &:hover {
@@ -91,10 +108,49 @@
         display: inline-block;
         color: var(--color-accent);
         text-decoration: underline;
+        color: var(--color-accent);
+        font-size: 14px;
+        font-weight: 500;
+        border: none;
+        background: transparent;
+        cursor: pointer;
 
         @media (hover: hover) and (pointer: fine) {
             &:hover {
                 text-decoration: none;
+            }
+        }
+    }
+
+    .card {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        gap: calc(var(--base-offset) * 2);
+        padding: calc(var(--base-offset) * 2);
+        background: var(--color-secondary);
+        border-radius: var(--base-offset);
+        border: 1px solid var(--color-border);
+        background: var(--color-secondary);
+
+        .title {
+            width: 100%;
+            font-size: 22px;
+            font-weight: 500;
+        }
+
+        .text {
+            display: block;
+            width: 100%;
+
+            a {
+                text-decoration: none;
+
+                @media (hover: hover) and (pointer: fine) {
+                    &:hover {
+                        text-decoration: underline;
+                    }
+                }
             }
         }
     }
