--- a/src/pages/index/components/results/results.pug
+++ b/src/pages/index/components/results/results.pug
@@ -120,3 +120,6 @@
                     img(src="https://aws.massive.ru/widget-img-analog/20.jpg" alt="" loading="lazy")
                 h3.results__title A9518LM-5BA
                 p.results__text Текст карточки
+
+    .results__button
+        a.btn.btn_base(href="#") Хочу также на своем интернет-магазине
