--- a/src/pages/index/components/search-form/search-form.pug
+++ b/src/pages/index/components/search-form/search-form.pug
@@ -1,16 +1,20 @@
 form(action="").asd__form
     .asd__form-group
-        label.asd__label.asd__label_text.visible(data-type-target="code")
+        label.asd__label.visible(data-type-target="code")
             mark Укажите Артикул товара
             input(placeholder="vendor code из фида")
 
-        label.asd__label.asd__label_text(data-type-target="url")
+        label.asd__label(data-type-target="url")
             mark Укажите URL товара
             input(placeholder="https://example.com")
 
-        label.asd__label.asd__label_text(data-type-target="image")
-            mark Выберите картинку
-            input(placeholder="")
+        .asd__label(data-type-target="image")
+            mark Загрузите фото товара
+
+            .asd__file-input
+                input#asd-custom-file-input.invisible(type='file' name="image" accept=".jpg, .jpeg, .png, .webp")
+                label(for='asd-custom-file-input') Выберите файл
+                span(data-default-value="Файл не выбран") Файл не выбран
 
         // Отключить бэйджим можно с помощью класса .invisible
         div.asd__res-count
@@ -18,7 +22,7 @@ form(action="").asd__form
             span
 
     .asd__form-group
-        label.asd__label.asd__label_select
+        label.asd__label
             mark Выберите категорию, в которой осуществлять поиск
 
             .asd__select
@@ -94,9 +98,6 @@ form(action="").asd__form
                             label
                                 input.invisible(type='radio' name='temp' value='')
                                 span.value Торшеры
-
-
-
 
     .asd__buttons-wrap
         button.btn.btn_block.btn_base(type="button") Искать
