--- a/src/pages/index/_style.scss
+++ b/src/pages/index/_style.scss
@@ -4,10 +4,18 @@
     &__wrap {
         display: flex;
         flex-direction: column;
-        padding: calc(var(--base-offset) * 6) calc(var(--base-offset) * 12);
+        padding: calc(var(--base-offset) * 3) var(--base-offset);
         background-color: var(--color-back);
         border-radius: calc(var(--base-offset) * 2);
         margin-bottom: calc(var(--base-offset) * 4);
+
+        @media (min-width: $lg) {
+            padding: calc(var(--base-offset) * 4) calc(var(--base-offset) * 8);
+        }
+
+        @media (min-width: $xl) {
+            padding: calc(var(--base-offset) * 6) calc(var(--base-offset) * 12);
+        }
 
         &:last-of-type {
             margin-bottom: 0;
@@ -16,10 +24,29 @@
 
     &__container {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: calc(var(--base-offset) * 2);
         width: 100%;
         height: auto;
+
+        @media (min-width: $lg) {
+            grid-template-columns: repeat(2, 1fr);
+            grid-gap: calc(var(--base-offset) * 2);
+        }
+    }
+
+    #examples {
+        order: 2;
+
+        @media (min-width: $lg) {
+            order: 1;
+        }
+    }
+
+    #warning {
+        order: 1;
+
+        @media (min-width: $lg) {
+            order: 2;
+        }
     }
 
     &__column {
@@ -32,40 +59,75 @@
     }
 
     &__title {
-        font-size: 54px;
-        font-weight: 700;
-        margin-bottom: calc(var(--base-offset) * 6);
+        font-size: 22px;
+        font-weight: 500;
+        margin-bottom: calc(var(--base-offset) * 3);
         text-align: center;
 
-        @media (min-width: $xxl) {
+        @media (min-width: $sm) {
+            font-size: 30px;
+            font-weight: 700;
+            margin-bottom: calc(var(--base-offset) * 4);
+        }
+
+        @media (min-width: $md) {
+            font-size: 40px;
+        }
+
+        @media (min-width: $xl) {
             margin-right: -10px;
+            font-size: 54px;
+            margin-bottom: calc(var(--base-offset) * 6);
         }
     }
 
     &__tubs-types {
         display: flex;
-        flex-wrap: wrap;
         align-items: center;
         gap: var(--base-offset);
-        margin-bottom: calc(var(--base-offset) * 6);
+        margin-bottom: calc(var(--base-offset) * 3);
+        margin-left: calc(var(--base-offset) * -1);
+        margin-right: calc(var(--base-offset) * -1);
+        padding: 0 var(--base-offset);
+        overflow-x: auto;
+        overflow-y: hidden;
+        ms-overflow-style: none;
+        scrollbar-width: none;
+
+        @media (min-width: $md) {
+            margin-bottom: calc(var(--base-offset) * 6);
+        }
+
+        &::-webkit-scrollbar {
+            width: 0;
+            height: 0;
+        }
 
         button {
             display: flex;
             align-items: center;
             justify-content: center;
             width: auto;
-            height: calc(var(--base-offset) * 5);
+            height: calc(var(--base-offset) * 3.33);
             text-align: center;
-            font-size: 18px;
+            font-size: 14px;
             font-weight: 500;
             border-radius: 999px;
             border: 1px solid var(--color-tabs-border);
             background: var(--color-tabs-back);
-            padding-left: calc(var(--base-offset) * 3);
-            padding-right: calc(var(--base-offset) * 3);
+            padding-left: calc(var(--base-offset) * 1.6);
+            padding-right: calc(var(--base-offset) * 1.6);
             cursor: pointer;
             transition: var(--base-transition);
             user-select: none;
+            white-space: nowrap;
+
+            @media (min-width: $sm) {
+                height: calc(var(--base-offset) * 5);
+                font-size: 18px;
+                padding-left: calc(var(--base-offset) * 3);
+                padding-right: calc(var(--base-offset) * 3);
+            }
 
             &.active {
                 background-color: var(--color-secondary);
@@ -79,7 +141,58 @@
                     background-color: var(--color-secondary);
                 }
             }
+        }
+    }
 
+    &__tubs-columns {
+        display: flex;
+        align-items: stretch;
+        justify-content: space-between;
+        gap: var(--base-offset);
+        position: relative;
+        width: 100%;
+        height: auto;
+        background: var(--color-secondary);
+        padding: var(--base-offset);
+        margin-bottom: calc(var(--base-offset) * 2);
+        border-radius: var(--base-offset);
+        border: 1px solid var(--color-border);
+        background: var(--color-secondary);
+
+        @media (min-width: $sm) {
+            margin-bottom: calc(var(--base-offset) * 4);
+            padding: calc(var(--base-offset) * 2);
+            gap: calc(var(--base-offset) * 2);
+        }
+
+        @media (min-width: $lg) {
+            display: none;
+        }
+
+        button {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            padding: calc(var(--base-offset) * 0.8) calc(var(--base-offset) * 1.6);
+            border-radius: 7px;
+            border: 1px solid var(--color-border);
+            background: var(--color-back);
+            color: var(--color-card-back);
+            font-size: 14px;
+            font-weight: 500;
+            transition: var(--base-transition);
+
+            &.active {
+                background: var(--color-card-back);
+                color: var(--color-secondary);
+                pointer-events: none;
+            }
+
+            @media (min-width: $sm) {
+                padding: calc(var(--base-offset) * 2);
+                font-size: 18px;
+            }
         }
     }
 }
