--- a/src/pages/index/components/examples/_style.scss
+++ b/src/pages/index/components/examples/_style.scss
@@ -6,7 +6,6 @@
         display: flex;
         flex-direction: column;
         gap: var(--base-offset);
-        margin-top: 40px;
 
         &__item {
             display: flex;
@@ -15,6 +14,7 @@
         }
 
         &__pic {
+            flex-shrink: 0;
             display: block;
             position: relative;
             width: 40px;
