--- a/src/pages/index/components/info/info.pug
+++ b/src/pages/index/components/info/info.pug
@@ -1,6 +1,2 @@
-.card
+.card.info
     p.text В демо кабинете Вы можете попробовать поиск товара по одной из предоставленных выгрузок или загрузить свою выгрузку и оценить, как такой поиск будет работать на вашем сайте.
-
-.card
-    p.text В демо кабинете Вы можете попробовать поиск товара по одной из предоставленных выгрузок или загрузить свою выгрузку и оценить, как такой поиск будет работать на вашем сайте.
-    a.btn.btn_base.btn_small(href="#") Зарегистрироваться
