--- a/src/pages/index/components/results/_style.scss
+++ b/src/pages/index/components/results/_style.scss
@@ -3,9 +3,21 @@
 .results {
     &__list {
         display: grid;
-        // grid-template-columns: repeat(5, 1fr);
-        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-        grid-gap: calc(var(--base-offset) * 2);
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: var(--base-offset);
+
+        @media (min-width: $sm) {
+            grid-template-columns: repeat(3, 1fr);
+        }
+
+        @media (min-width: $md) {
+            grid-template-columns: repeat(4, 1fr);
+            grid-gap: calc(var(--base-offset) * 2);
+        }
+
+        @media (min-width: $lg) {
+            grid-template-columns: repeat(5, 1fr);
+        }
     }
 
     &__card {
@@ -64,6 +76,14 @@
         margin-bottom: var(--base-offset);
         border-radius: calc(var(--base-offset) / 2);
         overflow: hidden;
+
+        img {
+            display: block;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
     }
 
     &__title {
@@ -75,6 +95,17 @@
         width: 100%;
         margin-bottom: calc(var(--base-offset) / 2);
         color: var(--color-lite);
+        font-size: 14px;
+        font-weight: 500;
+
+        @media (min-width: $sm) {
+            font-size: 16px;
+            font-weight: 400;
+        }
+
+        @media (min-width: $md) {
+            font-size: 18px;
+        }
     }
 
     &__text {
@@ -84,7 +115,22 @@
         overflow: hidden;
         text-overflow: ellipsis;
         width: 100%;
-        font-size: 14px;
+        font-size: 12px;
         max-height: 34px;
+
+        @media (min-width: $sm) {
+            font-size: 14px;
+        }
+    }
+
+    &__button {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        margin-top: calc(var(--base-offset) * 2);
+
+        @media (min-width: $lg) {
+            margin-top: calc(var(--base-offset) * 4);
+        }
     }
 }
