--- a/src/scss/_default.scss
+++ b/src/scss/_default.scss
@@ -41,6 +41,10 @@
         z-index: -1 !important;
     }
 
+    .hidden {
+        display: none !important;
+    }
+
     .btn {
         display: flex;
         align-items: center;
@@ -142,6 +146,11 @@
         .text {
             display: block;
             width: 100%;
+            font-size: 14px;
+
+            @media (min-width: $sm) {
+                font-size: 18px;
+            }
 
             a {
                 text-decoration: none;
