Added modal and handle actions

--- a/src/pages/index/components/feed-form/feed-form.pug
+++ b/src/pages/index/components/feed-form/feed-form.pug
@@ -50,6 +50,6 @@ form(action="").asd__form
                 span
         input(placeholder="URL фида в формате YML")
 
-    button.btn.btn_lite#addUserFeedButton(type="button") Добавить
+    button.btn.btn_lite#addUserFeedButton(type="button" data-modal-title="Ошибка" data-modal-text="Вы не добавили Фид. Необходимо указать URL фида в формате YML") Добавить
 
     include ../info/info
