--- a/src/scss/_default.scss
+++ b/src/scss/_default.scss
@@ -163,4 +163,81 @@
             }
         }
     }
+
+    .modal {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: fixed;
+        z-index: 100;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        background: rgba(0, 0, 0, 0);
+        transition: var(--base-transition);
+
+        &.visible {
+            background: rgba(0, 0, 0, 0.40);
+
+            .modal__body {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
+        &__body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            position: relative;
+            width: 90%;
+            max-width: 600px;
+            padding: calc(var(--base-offset) * 2);
+            background-color: var(--color-secondary);
+            border-radius: calc(var(--base-offset) * 1);
+            transform: translateY(-10px);
+            opacity: 0;
+            transition: var(--base-transition);
+        }
+
+        &__title {
+            text-align: center;
+            font-size: 22px;
+            font-weight: 500;
+            margin-bottom: 5px;
+        }
+
+        &__text {
+            text-align: center;
+            font-size: 14px;
+            text-wrap: balance;
+            margin-bottom: calc(var(--base-offset) * 1.5);
+
+            @media (min-width: $sm) {
+                font-size: 18px;
+            }
+        }
+
+        &__line {
+            display: block;
+            width: calc(100% + var(--base-offset) * 4);
+            height: 0.333px;
+            background: var(--color-card-back);
+            opacity: 0.5;
+        }
+
+        &__close {
+            border: none;
+            background: transparent;
+            color: var(--color-accent);
+            text-align: center;
+            font-size: 18px;
+            font-weight: 500;
+            margin-top: calc(var(--base-offset) * 1.5);
+            cursor: pointer;
+        }
+    }
 }
