Added example modals

--- a/src/pages/index/components/res-msg/_style.scss
+++ b/src/pages/index/components/res-msg/_style.scss
@@ -1,14 +1,16 @@
-.res-msg {
-    display: block;
-    margin-top: calc(var(--base-offset) * 4);
-    margin-bottom: calc(var(--base-offset) * 4);
+.asd {
+    .res-msg {
+        display: block;
+        margin-top: calc(var(--base-offset) * 4);
+        margin-bottom: calc(var(--base-offset) * 4);
 
-    p {
-        font-size: 18px;
-        font-weight: 500;
+        p {
+            font-size: 18px;
+            font-weight: 500;
 
-        span {
-            font-weight: 400;
+            span {
+                font-weight: 400;
+            }
         }
     }
 }
