--- a/src/pages/index/components/examples/examples.pug
+++ b/src/pages/index/components/examples/examples.pug
@@ -5,7 +5,7 @@ ul.examples
 
         p.examples__text Как подобное решение внедрено на Wildberries?
 
-        button.link.examples__link(type="button") Посмотреть
+        button.link.examples__link(type="button" data-src="https://aws.massive.ru/widget-img-analog/example.wb.png") Посмотреть
 
     li.examples__item
         .examples__pic
@@ -13,6 +13,6 @@ ul.examples
 
         p.examples__text Как внедрено на Ozon?
 
-        button.link.examples__link(type="button") Посмотреть
+        button.link.examples__link(type="button" data-src="https://aws.massive.ru/widget-img-analog/example.ozon.png") Посмотреть
 
 a.examples__button.btn.btn_base.btn_block(href="#") Хочу также на своем интернет-магазине
