--- a/src/pages/index/components/results/_style.scss
+++ b/src/pages/index/components/results/_style.scss
@@ -1,136 +1,139 @@
 @import '../../../../scss/sass-variables';
 
-.results {
-    &__list {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: var(--base-offset);
+.asd {
+    .results {
+        &__list {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-gap: var(--base-offset);
 
-        @media (min-width: $sm) {
-            grid-template-columns: repeat(3, 1fr);
+            @media (min-width: $sm) {
+                grid-template-columns: repeat(3, 1fr);
+            }
+
+            @media (min-width: $md) {
+                grid-template-columns: repeat(4, 1fr);
+                grid-gap: calc(var(--base-offset) * 2);
+            }
+
+            @media (min-width: $lg) {
+                grid-template-columns: repeat(5, 1fr);
+            }
         }
 
-        @media (min-width: $md) {
-            grid-template-columns: repeat(4, 1fr);
-            grid-gap: calc(var(--base-offset) * 2);
-        }
+        &__card {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            position: relative;
+            padding: var(--base-offset);
+            background: var(--color-secondary);
+            border-radius: var(--base-offset);
+            height: 100%;
+            user-select: none;
 
-        @media (min-width: $lg) {
-            grid-template-columns: repeat(5, 1fr);
-        }
-    }
+            @media (hover: hover) and (pointer: fine) {
+                &:hover {
+                    &::before, &::after {
+                        opacity: 1;
+                    }
+                }
+            }
 
-    &__card {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        position: relative;
-        padding: var(--base-offset);
-        background: var(--color-secondary);
-        border-radius: var(--base-offset);
-        height: 100%;
-        user-select: none;
+            &::after {
+                content: 'Cмотреть аналоги';
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                z-index: 1;
+                font-weight: 700;
+                color: var(--color-primary);
+                background: rgba(255,255,2556, 0.4);
+                backdrop-filter: blur(2px);
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                opacity: 0;
+                transition: var(--base-transition);
+                text-align: center;
+            }
 
-        @media (hover: hover) and (pointer: fine) {
-            &:hover {
-                &::before, &::after {
-                    opacity: 1;
+            &.selected {
+                background: var(--color-card-back);
+                pointer-events: none;
+
+                * {
+                    color: var(--color-secondary);
                 }
             }
         }
 
-        &::after {
-            content: 'Cмотреть аналоги';
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            z-index: 1;
-            font-weight: 700;
-            color: var(--color-primary);
-            background: rgba(255,255,2556, 0.4);
-            backdrop-filter: blur(2px);
-            position: absolute;
-            top: 0;
-            left: 0;
+        &__pic {
+            display: block;
+            position: relative;
             width: 100%;
-            height: 100%;
-            opacity: 0;
-            transition: var(--base-transition);
-        }
+            aspect-ratio: 1 / 1;
+            margin-bottom: var(--base-offset);
+            border-radius: calc(var(--base-offset) / 2);
+            overflow: hidden;
 
-        &.selected {
-            background: var(--color-card-back);
-            pointer-events: none;
-
-            * {
-                color: var(--color-secondary);
+            img {
+                display: block;
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
             }
         }
-    }
 
-    &__pic {
-        display: block;
-        position: relative;
-        width: 100%;
-        aspect-ratio: 1 / 1;
-        margin-bottom: var(--base-offset);
-        border-radius: calc(var(--base-offset) / 2);
-        overflow: hidden;
-
-        img {
-            display: block;
-            position: absolute;
+        &__title {
+            display: -webkit-box;
+            -webkit-line-clamp: 1;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
             width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-    }
-
-    &__title {
-        display: -webkit-box;
-        -webkit-line-clamp: 1;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        width: 100%;
-        margin-bottom: calc(var(--base-offset) / 2);
-        color: var(--color-lite);
-        font-size: 14px;
-        font-weight: 500;
-
-        @media (min-width: $sm) {
-            font-size: 16px;
-            font-weight: 400;
-        }
-
-        @media (min-width: $md) {
-            font-size: 18px;
-        }
-    }
-
-    &__text {
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        width: 100%;
-        font-size: 12px;
-        max-height: 34px;
-
-        @media (min-width: $sm) {
+            margin-bottom: calc(var(--base-offset) / 2);
+            color: var(--color-lite);
             font-size: 14px;
+            font-weight: 500;
+
+            @media (min-width: $sm) {
+                font-size: 16px;
+                font-weight: 400;
+            }
+
+            @media (min-width: $md) {
+                font-size: 18px;
+            }
         }
-    }
 
-    &__button {
-        display: flex;
-        justify-content: center;
-        width: 100%;
-        margin-top: calc(var(--base-offset) * 2);
+        &__text {
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            width: 100%;
+            font-size: 12px;
+            max-height: 34px;
 
-        @media (min-width: $lg) {
-            margin-top: calc(var(--base-offset) * 4);
+            @media (min-width: $sm) {
+                font-size: 14px;
+            }
+        }
+
+        &__button {
+            display: flex;
+            justify-content: center;
+            width: 100%;
+            margin-top: calc(var(--base-offset) * 2);
+
+            @media (min-width: $lg) {
+                margin-top: calc(var(--base-offset) * 4);
+            }
         }
     }
 }
