Fixed style source paths

--- a/src/pages/index/components/res-msg/_style.scss
+++ b/src/pages/index/components/res-msg/_style.scss
@@ -1,7 +1,7 @@
 .asd {
     .res-msg {
         display: block;
-        margin-top: calc(var(--base-offset) * 4);
+        margin-top: 0;
         margin-bottom: calc(var(--base-offset) * 4);
 
         p {
