--- a/src/pages/index/components/search-form/search-form.pug
+++ b/src/pages/index/components/search-form/search-form.pug
@@ -15,6 +15,7 @@ form(action="").asd__form
                 input#asdInputfile.invisible(type='file' name="image" accept=".jpg, .jpeg, .png, .webp")
                 label(for='asdInputfile') Выберите файл
                 span(data-default-value="Файл не выбран") Файл не выбран
+                button(type="button" title="Удалить картинку").hidden
 
         // Отключить бэйджим можно с помощью класса .invisible
         div.asd__res-count
