--- a/src/pages/index/components/feed-form/feed-form.pug
+++ b/src/pages/index/components/feed-form/feed-form.pug
@@ -43,11 +43,8 @@ form(action="").asd__form
 
 
     label.asd__label.asd__feed-selector.collapsed
-        mark Добавить свою выгрузку
-            span.points(type="button")
-                span
-                span
-                span
+        mark
+            span.toggler Добавить свою выгрузку
         input(placeholder="URL фида в формате YML")
 
     button.btn.btn_lite#addUserFeedButton(type="button" data-modal-title="Ошибка" data-modal-text="Вы не добавили Фид. Необходимо указать URL фида в формате YML") Добавить
